--- a/new/Pitch_Detection.ipynb
+++ b/new/Pitch_Detection.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNa+OSr+iP7gx8zrIhxuz7x",
+      "authorship_tag": "ABX9TyOBWOWidOX7/1knAnAUAM3A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,195 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "SNGlfIwR0LKC"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SNGlfIwR0LKC",
+        "outputId": "e0d4f019-c2b2-43fb-80d1-9e65fed6acda"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Reading package lists...\n",
+            "Building dependency tree...\n",
+            "Reading state information...\n",
+            "libsndfile1 is already the newest version (1.0.28-7ubuntu0.1).\n",
+            "The following additional packages will be installed:\n",
+            "  fluid-soundfont-gm libao-common libao4\n",
+            "Suggested packages:\n",
+            "  fluid-soundfont-gs fluidsynth libaudio2 libsndio6.1 freepats pmidi\n",
+            "  timidity-daemon\n",
+            "The following NEW packages will be installed:\n",
+            "  fluid-soundfont-gm libao-common libao4 timidity\n",
+            "0 upgraded, 4 newly installed, 0 to remove and 15 not upgraded.\n",
+            "Need to get 120 MB of archives.\n",
+            "After this operation, 150 MB of additional disk space will be used.\n",
+            "Get:1 http://archive.ubuntu.com/ubuntu focal/universe amd64 fluid-soundfont-gm all 3.1-5.1 [119 MB]\n",
+            "Get:2 http://archive.ubuntu.com/ubuntu focal/main amd64 libao-common all 1.2.2+20180113-1ubuntu1 [6,644 B]\n",
+            "Get:3 http://archive.ubuntu.com/ubuntu focal/main amd64 libao4 amd64 1.2.2+20180113-1ubuntu1 [35.1 kB]\n",
+            "Get:4 http://archive.ubuntu.com/ubuntu focal/universe amd64 timidity amd64 2.14.0-8build1 [613 kB]\n",
+            "Fetched 120 MB in 2s (69.7 MB/s)\n",
+            "debconf: unable to initialize frontend: Dialog\n",
+            "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 76, <> line 4.)\n",
+            "debconf: falling back to frontend: Readline\n",
+            "debconf: unable to initialize frontend: Readline\n",
+            "debconf: (This frontend requires a controlling tty.)\n",
+            "debconf: falling back to frontend: Teletype\n",
+            "dpkg-preconfigure: unable to re-open stdin: \n",
+            "Selecting previously unselected package fluid-soundfont-gm.\n",
+            "(Reading database ... 123069 files and directories currently installed.)\n",
+            "Preparing to unpack .../fluid-soundfont-gm_3.1-5.1_all.deb ...\n",
+            "Unpacking fluid-soundfont-gm (3.1-5.1) ...\n",
+            "Selecting previously unselected package libao-common.\n",
+            "Preparing to unpack .../libao-common_1.2.2+20180113-1ubuntu1_all.deb ...\n",
+            "Unpacking libao-common (1.2.2+20180113-1ubuntu1) ...\n",
+            "Selecting previously unselected package libao4:amd64.\n",
+            "Preparing to unpack .../libao4_1.2.2+20180113-1ubuntu1_amd64.deb ...\n",
+            "Unpacking libao4:amd64 (1.2.2+20180113-1ubuntu1) ...\n",
+            "Selecting previously unselected package timidity.\n",
+            "Preparing to unpack .../timidity_2.14.0-8build1_amd64.deb ...\n",
+            "Unpacking timidity (2.14.0-8build1) ...\n",
+            "Setting up libao-common (1.2.2+20180113-1ubuntu1) ...\n",
+            "Setting up libao4:amd64 (1.2.2+20180113-1ubuntu1) ...\n",
+            "Setting up fluid-soundfont-gm (3.1-5.1) ...\n",
+            "Setting up timidity (2.14.0-8build1) ...\n",
+            "Processing triggers for man-db (2.9.1-1) ...\n",
+            "Processing triggers for mime-support (3.64ubuntu1) ...\n",
+            "Processing triggers for libc-bin (2.31-0ubuntu9.9) ...\n"
+          ]
+        }
+      ],
+      "source": [
+        "!sudo apt-get install -q -y timidity libsndfile1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install pydub librosa music21"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qzk523pR0ZQG",
+        "outputId": "202011ec-850f-4332-88d2-eebcb381b773"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Collecting pydub\n",
+            "  Downloading pydub-0.25.1-py2.py3-none-any.whl (32 kB)\n",
+            "Requirement already satisfied: librosa in /usr/local/lib/python3.10/dist-packages (0.10.0.post2)\n",
+            "Requirement already satisfied: music21 in /usr/local/lib/python3.10/dist-packages (8.1.0)\n",
+            "Requirement already satisfied: audioread>=2.1.9 in /usr/local/lib/python3.10/dist-packages (from librosa) (3.0.0)\n",
+            "Requirement already satisfied: numpy!=1.22.0,!=1.22.1,!=1.22.2,>=1.20.3 in /usr/local/lib/python3.10/dist-packages (from librosa) (1.22.4)\n",
+            "Requirement already satisfied: scipy>=1.2.0 in /usr/local/lib/python3.10/dist-packages (from librosa) (1.10.1)\n",
+            "Requirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.10/dist-packages (from librosa) (1.2.2)\n",
+            "Requirement already satisfied: joblib>=0.14 in /usr/local/lib/python3.10/dist-packages (from librosa) (1.2.0)\n",
+            "Requirement already satisfied: decorator>=4.3.0 in /usr/local/lib/python3.10/dist-packages (from librosa) (4.4.2)\n",
+            "Requirement already satisfied: numba>=0.51.0 in /usr/local/lib/python3.10/dist-packages (from librosa) (0.56.4)\n",
+            "Requirement already satisfied: soundfile>=0.12.1 in /usr/local/lib/python3.10/dist-packages (from librosa) (0.12.1)\n",
+            "Requirement already satisfied: pooch<1.7,>=1.0 in /usr/local/lib/python3.10/dist-packages (from librosa) (1.6.0)\n",
+            "Requirement already satisfied: soxr>=0.3.2 in /usr/local/lib/python3.10/dist-packages (from librosa) (0.3.5)\n",
+            "Requirement already satisfied: typing-extensions>=4.1.1 in /usr/local/lib/python3.10/dist-packages (from librosa) (4.6.3)\n",
+            "Requirement already satisfied: lazy-loader>=0.1 in /usr/local/lib/python3.10/dist-packages (from librosa) (0.2)\n",
+            "Requirement already satisfied: msgpack>=1.0 in /usr/local/lib/python3.10/dist-packages (from librosa) (1.0.5)\n",
+            "Requirement already satisfied: chardet in /usr/local/lib/python3.10/dist-packages (from music21) (4.0.0)\n",
+            "Requirement already satisfied: jsonpickle in /usr/local/lib/python3.10/dist-packages (from music21) (3.0.1)\n",
+            "Requirement already satisfied: matplotlib in /usr/local/lib/python3.10/dist-packages (from music21) (3.7.1)\n",
+            "Requirement already satisfied: more-itertools in /usr/local/lib/python3.10/dist-packages (from music21) (9.1.0)\n",
+            "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from music21) (2.27.1)\n",
+            "Requirement already satisfied: webcolors>=1.5 in /usr/local/lib/python3.10/dist-packages (from music21) (1.13)\n",
+            "Requirement already satisfied: llvmlite<0.40,>=0.39.0dev0 in /usr/local/lib/python3.10/dist-packages (from numba>=0.51.0->librosa) (0.39.1)\n",
+            "Requirement already satisfied: setuptools in /usr/local/lib/python3.10/dist-packages (from numba>=0.51.0->librosa) (67.7.2)\n",
+            "Requirement already satisfied: appdirs>=1.3.0 in /usr/local/lib/python3.10/dist-packages (from pooch<1.7,>=1.0->librosa) (1.4.4)\n",
+            "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.10/dist-packages (from pooch<1.7,>=1.0->librosa) (23.1)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests->music21) (1.26.16)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests->music21) (2023.5.7)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests->music21) (2.0.12)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests->music21) (3.4)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn>=0.20.0->librosa) (3.1.0)\n",
+            "Requirement already satisfied: cffi>=1.0 in /usr/local/lib/python3.10/dist-packages (from soundfile>=0.12.1->librosa) (1.15.1)\n",
+            "Requirement already satisfied: contourpy>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->music21) (1.1.0)\n",
+            "Requirement already satisfied: cycler>=0.10 in /usr/local/lib/python3.10/dist-packages (from matplotlib->music21) (0.11.0)\n",
+            "Requirement already satisfied: fonttools>=4.22.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->music21) (4.40.0)\n",
+            "Requirement already satisfied: kiwisolver>=1.0.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->music21) (1.4.4)\n",
+            "Requirement already satisfied: pillow>=6.2.0 in /usr/local/lib/python3.10/dist-packages (from matplotlib->music21) (8.4.0)\n",
+            "Requirement already satisfied: pyparsing>=2.3.1 in /usr/local/lib/python3.10/dist-packages (from matplotlib->music21) (3.1.0)\n",
+            "Requirement already satisfied: python-dateutil>=2.7 in /usr/local/lib/python3.10/dist-packages (from matplotlib->music21) (2.8.2)\n",
+            "Requirement already satisfied: pycparser in /usr/local/lib/python3.10/dist-packages (from cffi>=1.0->soundfile>=0.12.1->librosa) (2.21)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil>=2.7->matplotlib->music21) (1.16.0)\n",
+            "Installing collected packages: pydub\n",
+            "Successfully installed pydub-0.25.1\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow as tf\n",
+        "import tensorflow_hub as hub\n",
+        "\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import librosa\n",
+        "from librosa import display as librosadisplay\n",
+        "\n",
+        "import logging\n",
+        "import math\n",
+        "import statistics\n",
+        "import sys\n",
+        "\n",
+        "from IPython.display import Audio, Javascript\n",
+        "from scipy.io import wavfile\n",
+        "\n",
+        "from base64 import b64decode\n",
+        "\n",
+        "import music21\n",
+        "from pydub import AudioSegment\n",
+        "\n",
+        "logger = logging.getLogger()\n",
+        "logger.setLevel(logging.ERROR)\n",
+        "\n",
+        "print(\"tensorflow: %s\" % tf.__version__)\n",
+        "print(\"librosa: %s\" % librosa.__version__)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "apb62GCI0iP3",
+        "outputId": "127b5dff-4653-42df-f90d-d2bfc26ffbd7"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tensorflow: 2.12.0\n",
+            "librosa: 0.10.0.post2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "zXpR4bDq0o5-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
